--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <h3 class="text">Занимайся онлайн в удобное время в <br /> любом месте! Запишитесь на бесплатный <br /> пробный урок уже сегодня.</h3>
                 </div>
                 <div class="title__item">
-                    <div class="button">
+                    <button class="button">
                       <p class="text">Записаться на пробный урок</p>
-                    </div>
+                    </button>
                 </div>    
             </div>
             
@@ -77,12 +77,12 @@
           <div class="box">
             <div class="block-text">
             <h4 class="text">Мы научим говорить уверенно!</h4>
-            <p class="text set pad">Мы считаем, что главная задача языка - помочь нам общаться <br />друг с другом. Поэтому на наших занятиях мы отдаем приоретет <br />
+            <p class="text set pad">Мы считаем, что главная задача языка - помочь нам общаться друг с другом. Поэтому на наших занятиях мы отдаем приоретет 
              разговорной речи и навыкам аудирования.</p>
 
-            <p class="text set">Мы не изучаем грамматические правила по учебнику, мы не <br />выполняем задания, где нужно раскрыть скобки или поставить <br /> 
-            правильный артикль, мы занимаемся самым главным - <br /> разговариваем. Мы разговариваем на самые актуальные и <br /> 
-            интересные темы, чтобы вы могли пополнить свой словарным <br /> запас актуальными современными словами.</p>
+            <p class="text set">Мы не изучаем грамматические правила по учебнику, мы не выполняем задания, где нужно раскрыть скобки или поставить
+            правильный артикль, мы занимаемся самым главным -  разговариваем. Мы разговариваем на самые актуальные и  
+            интересные темы, чтобы вы могли пополнить свой словарным  запас актуальными современными словами.</p>
             </div>
             <div class="img">
               <img class="box__image" src="group-people.jpg" alt="" />
@@ -91,24 +91,19 @@
         </div>   
        </div> 
 
-       <div class="third-screen">
         <div class="third-screen__box">
           <h2 class="third-screen__title-of-section text">Запишитесь на бесплатный урок уже сегодня</h2>
           <p class="text third-screen__text">Преподаватель определит ваш уровень, и Вы пройдете полноценный первый урок</p>
 
           <div class="buttons">
-          <div class="third-sreen__button">
-            <p class="third-sreen__button_text text">Ваше имя</p>
-          </div>
-          <div class="third-sreen__button">
-            <p class="third-sreen__button_text text">Ваш телефон</p>
-          </div>
-          <div class="button margin">
+          <input value="Ваше имя" class="third-sreen__button"/>
+          <input value="Ваш телефон" class="third-sreen__button"/>
+          
+          <button class="button margin">
             <p class="text">Записаться на пробный урок</p>
-          </div>
+          </button>
           </div>
         </div>
-       </div>
 
        <div class="fourth-screen">
         <div class="content">
